--- 13-December-2011, version 1.9-56
functions min, max, mean (with a RasterStackBrick object) ignored the na.rm argument. Bug reported by Maximilian Reinwand
 
--- 12-December-2011, version 1.9-55
bug fix aggregate with multi-layer objects, reported by Colin Rundel.
improvements to merge (Raster,Raster) function and merge docs.
bug with progressbar fixed in terrain (reported by Pascal Fust)

--- 2-December-2011, version 1.9-52
writeValues methods now only available with a vector (RasterLayer) or matrix (RasterStack) argument. To avoid perhaps unexpected coercion (column-wise coercion to vector); problem pointed out by Kristina Helle.
new argument 'snap' in alignExtent and crop (suggested by Matteo Mattiuzzi)
approxNA can now interpolated over non-equal distance (suggested by Tobias Schmidt)
bug fix for 'edge', reported by Steve Mosher.
bug fix for 'expand' with mutlti-layer objects and block-wise processing, reported by Jonathan Greenberg
bug fix in 'interpolate' reported by David Stephens

--- 25-November-2011, version 1.9-47
Improvements to new polygon manipulation functions. 
Bug fixes with reclass(include.lowest=TRUE) if the reclass value was a Real (like NA) it was coerced to an integer, reported by Steve Mosher.

--- 17-November-2011, version 1.9-44
fixed bug with cell values reading with BIL driver (reported by sonal singhal)
fixed serious bug with a stack from different bands from the same file. .cellValues returned values for the first band only (introduced in 1.9-41?). Reported by Matteo Mattiuzzi & Benjamin Mack
addition: crop method for Spatial* objects
addition: aggregate (dissolve) method for SpatialPolygons*
addition: merge (join) method for Spatial*DataFrame & data.frame; and for SpatialPolygons & SpatialPolygons
addition: raster algebra for SpatialPolygons: + (same as function merge), - (difference), * (= function crop)

--- 9-November-2011, version 1.9-41
beginCluster now has 'exclude' option (suggested by Julian Zeidler)