@@ -1,5 +1,6 @@
 --- 13-December-2011, version 1.9-56
 functions min, max, mean (with a RasterStackBrick object) ignored the na.rm argument. Bug reported by Maximilian Reinwand
+bug occurred when creating a RasterStack from a named list of Raster objects. Reported by Laurent Fernandez  
  
 --- 12-December-2011, version 1.9-55
 bug fix aggregate with multi-layer objects, reported by Colin Rundel.
